--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <div id="wrapper">
         <div id="header">
             <a href="" class="logo">
-                <img href="http://127.0.0.1:5500/", src="assets/logo@@.png" alt="">
+                <img href="index.html", src="assets/logo@@.png" alt="">
             </a>
             <div id="menu">
                 <div class="item">
                     <a href="">Trang chủ</a>
                 </div>
                 <div class="item">
-                    <a href="http://127.0.0.1:5500/sp.html">Sản phẩm</a>
+                    <a href="sp.html">Sản phẩm</a>
                 </div>
                 <div class="item">
                     <a href="">Blog</a>
@@ -33,10 +33,10 @@
             </div>
             <div id="actions">
                 <div class="item">
-                    <a href="http://127.0.0.1:5500/login.html#"><img src="assets/user.png" alt=""></a>
+                    <a href="login.html"><img src="assets/user.png" alt=""></a>
                 </div>
                 <div class="item">
-                    <a href="http://127.0.0.1:5500/sp.html"><img src="assets/cart.png" alt=""></a>
+                    <a href="sp.html"><img src="assets/cart.png" alt=""></a>
                 </div>
             </div>
         </div>
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div id="wp-products">
-            <h2 href="http://127.0.0.1:5500/sp.html">SẢN PHẨM CỦA CHÚNG TÔI</h2>
+            <h2 href="sp.html">SẢN PHẨM CỦA CHÚNG TÔI</h2>
             <ul id="list-products">
                 <div class="item">
                     <img src="assets/product_1.png" alt="">
@@ -371,10 +371,10 @@
                 <h3>NỘI DUNG</h3>
                 <ul class="quick-menu">
                     <div class="item">
-                        <a href="http://127.0.0.1:5500/?">Trang chủ</a>
+                        <a href="index.html">Trang chủ</a>
                     </div>
                     <div class="item">
-                        <a href="http://127.0.0.1:5500/sp.html">Sản phẩm</a>
+                        <a href="sp.html">Sản phẩm</a>
                     </div>
                     <div class="item">
                         <a href="">Blog</a>
